--- a/css/custom.css
+++ b/css/custom.css
@@ -55,11 +55,11 @@ img{
     margin-top: 22em;
 }
 .main {
-    background-image: url("../img/background.png");
+ background-image: url("../img/background.png");
     background-repeat: no-repeat;
-    background-size: cover;
+    background-size: 100% 100%;
+    display: -moz-stack;
     margin: auto;
-   /* position: fixed;*/
     width: 100%;
 }
 .form {
@@ -83,7 +83,6 @@ form p{
     height: 640px;
     margin-left: 2%;
    /* position: relative;*/
-   overflow:auto;
     text-align: center;
     width: 90%;
 }
@@ -312,11 +311,7 @@ input[type="button"] {
 }
 .videolist:first-child {
     margin-top: -34%;
-<<<<<<< HEAD
 }
-=======
-  }
->>>>>>> fd01c60b6fd9ec295d0c675ba3c76f0f11e81a2b
 .searched-items {
     margin: auto;
     overflow: auto; 
